<resources>
    <string name="app_name">Weather App</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="button_skip">"Skip here"</string>
    <string name="login_with">Login with</string>
    <string name="button_facebook" />
    <string name="button_google" />
    <string name="or">or</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_network_connection">No Internet</string>
    <string name="error_network_timeout">timeout</string>
    <string name="error_common">error common</string>

    <string name="facebook_app_id">821070938779903</string>
    <string name="fb_login_protocol_scheme">fb821070938779903</string>

</resources>